# ai-agent-release-readiness-qa

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.cursor/rules/: 00-core.mdc
.github/workflows/: ci.yml
adapters/: __init__.py  base.py
adapters/ai_agent/: __init__.py  conversation_analyzer.py  flow_analyzer.py  intent_analyzer.py  signal_extractor.py
adapters/generic/: __init__.py  signal_extractor.py
adapters/llm_readiness/: __init__.py  drift.py  extractors.py  load_transcript.py  models.py  reporting.py  summarize.py
cli/: __init__.py  _pipeline.py  main.py  run_smoke.py
core/: __init__.py
core/models/: __init__.py  normalized.py  normalizer.py  readiness.py  signals.py  test_case.py  test_result.py  test_results.py
core/parsers/: __init__.py  csv_loader.py  junit_loader.py
core/reporting/: __init__.py  exporter.py  markdown_builder.py
core/scoring/: __init__.py  scorer.py
docs/: ai-semantics.md
samples/: junit.xml  llm_transcript.json  llm_transcript_baseline.json  test_cases.csv
tests/: test_llm_drift.py  test_llm_readiness_signals.py  test_markdown_report.py  test_readiness_report.py  test_scoring_metrics.py
